update de color

--- a/index.html
+++ b/index.html
@@ -14,15 +14,10 @@
 <body>
     <!--Coordinates-->
     <div class="container">
-
-        <input type="button" value="Get Coordinates" id="coordinates">
-
-        <!--<button id="button" onclick="prueba()">Coordinates</button>
-        <p id="coordinates"></p> !-->
+        <button id="button" onclick="prueba()">Get Coordinates</button>
+        <p id="coordinates"></p> 
     </div>
     
-
-
 <script src="script.js"></script>
 </body>
 </html>
